--- a/icons/icons.qrc
+++ b/icons/icons.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>password-recorder.ico</file>
+        <file>combo_arrow.png</file>
     </qresource>
 </RCC>
